src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/NoLauncher/InvalidNoLauncher.php
<?php

namespace Invalid\NoLauncher;

use Claroline\PluginBundle\AbstractType\ClarolineApplication;

class InvalidNoLauncher extends ClarolineApplication
{
    public function getLaunchers()
    {
        return array();
    }
}